3단계 - 사다리(게임 실행) (#2342)
* refactor: 코드리뷰 반영

* 3단계 - 사다리(게임 실행)

* test: test코드 수정

* refactor: junctionvisitors 생성

* refactor: neighbors 이름변경

* refactor: junctionneighbors

---------

Co-authored-by: jemi lee <jemi.lee@kakaocorp.com>