@@ -1,6 +1,5 @@
 package nextstep.ladder.view;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
 
@@ -13,7 +12,15 @@ public class InputView {
         String input = SCANNER.nextLine();
         System.out.println();
         String[] names = input.split(",+");
-        return Arrays.asList(names);
+        return List.of(names);
+    }
+
+    public List<String> getResults() {
+        System.out.println("실행 결과를 입력하세요. (결과는 쉼표(,)로 구분하세요)");
+        String input = SCANNER.nextLine();
+        System.out.println();
+        String[] names = input.split(",+");
+        return List.of(names);
     }
 
     public int getLadderHeight() {
@@ -21,5 +28,12 @@ public class InputView {
         String input = SCANNER.nextLine();
         System.out.println();
         return Integer.parseInt(input);
+    }
+
+    public String getTargetParticipantName() {
+        System.out.println("결과를 보고 싶은 사람은?");
+        String input = SCANNER.nextLine();
+        System.out.println();
+        return input;
     }
 }
